bk_ida/gccida/c1/restore_line_notes
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1708:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1708:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1710:4: error: expected ';' after expression
rtx line_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1710:5: error: use of undeclared identifier 'line_note'
rtx line_note; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1714:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1714:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1718:1: error: use of undeclared identifier 'v4'
v4 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1721:1: error: use of undeclared identifier 'v4'
v4 = head; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1724:17: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 == 37 && v4[2].fld[0].rtint > 0 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1724:29: error: use of undeclared identifier 'v4'
if ( *( _WORD *)v4 == 37 && v4[2].fld[0].rtint > 0 ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1726:1: error: use of undeclared identifier 'v4'
v4 = ( rtx)v4[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1728:9: error: use of undeclared identifier 'v4'
while ( v4 ); 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1737:1: error: use of undeclared identifier 'line_note'
line_note = v4; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1737:13: error: use of undeclared identifier 'v4'
line_note = v4; 
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1739:1: error: use of undeclared identifier 'line_note'
line_note = v2; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1745:6: error: use of undeclared identifier 'line_note'
|| ( line_note = h_i_d[rtint].line_note) == 0LL 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1746:4: error: use of undeclared identifier 'line_note'
|| line_note == v4 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1746:17: error: use of undeclared identifier 'v4'
|| line_note == v4 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/haifa-sched.c:1747:10: error: use of undeclared identifier 'line_note'
|| v4 && line_note[2].fld[0].rtint == v4[2].fld[0].rtint && line_note[2] == v4[2] ) 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/restore_line_notes/src/obj/haifa-sched.o] Error 1
